--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group 'com.adolph'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 sourceCompatibility = 1.8
 
@@ -17,6 +17,6 @@ repositories {
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:${eureka_version}'
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:${eureka_version}"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
