--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,5 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8080/eureka/
     register-with-eureka: false
+  server:
+    enable-self-preservation: false
